# django-python-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yaml
app/: helper.py  settings.py  urls.py
tests/: conftest.py
tests/benchmark/: test_translation_munich_stadt.py  test_translation_performance.py
tests/translation/: test_get_translations.py  test_text_translation.py
tests/translation/api/: test_get_translations.py  test_html_translation.py  test_text_translation.py
tests/translation/api/data/: munich_stadt.html
tests/translation/api/data/de/: canvas_example.html  datetime_example.html  details_and_summary_example.html  embed_example.html  iframe_and_script_example.html  input_example.html  no_script_example.html  object_example.html  problem_statement_example.html  select_and_option_example.html  svg_example.html  template_example.html
tests/translation/api/data/en/: canvas_example.html  datetime_example.html  details_and_summary_example.html  embed_example.html  iframe_and_script_example.html  input_example.html  no_script_example.html  object_example.html  (+4 more)
tests/translation/services/: test_html_parallel_translation.py  test_html_sync_translation.py
translation/: admin.py  enums.py  models.py  serializer.py  urls.py
translation/migrations/: 0001_initial.py
translation/services/: html_translation_service.py  translation_service.py
translation/views/: translate_retrieve_view.py  translation.py  translation_view.py  user_translations_view.py
