[tool.poetry]
name = "django-python-service"
version = "0.1.0"
description = "Django Python Service"
authors = ["Ayush Pandey <ayushpandey.iitkgp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
